
[package]
name = "livewire"
description = "Cross platform Wifi Tool for Linux, Mac and Windows Operating Systems"
version = "0.1.0"
edition = "2021"
authors = ["Adeoye Adefemi <adefemiadeoye@yahoo.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[[example]]
name="linux"
path ="examples/linux/src/main.rs"


[[example]]
name="mac"
path ="examples/mac/src/main.rs"

[[example]]
name="windows"
path ="examples/windows/src/main.rs"


[[example]]
name="android"
path ="examples/android/src/main.rs"



[dependencies]
anyhow = "1.0.86"
serde = { version = "1.0.203", features = ["derive"] }
thiserror = "1.0.61"
wifiscanner = "0.5.1"
